Updated code styling

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -86,7 +86,7 @@ hr {
 pre {
   font-family: monospace, monospace;
   /* 1 */
-  font-size: 1em;
+  font-size: 14px;
   /* 2 */
 }
 
@@ -437,19 +437,21 @@ template {
 }
 
 .highlight {
-  background-color: #faf9f9;
-  -webkit-border-radius: 3px;
-          border-radius: 3px;
-  margin: 0;
+  border-radius: 8px;
+  padding: 10px; 
+  background-color: rgb(30, 30, 30);
+  /* -webkit-border-radius: 3px;
+          border-radius: 3px; */
+  margin: 0px;
 }
 
 .highlighter-rouge {
   color: #ce887b;
   font-weight: 400;
-  border: 1px solid #607D8B;
+  /* border: 1px solid #607D8B; */
   -webkit-border-radius: 3px;
           border-radius: 3px;
-  padding: 0.1rem 0.5rem;
+  /* padding: 0.1rem 0.5rem; */
 }
 
 .highlight .hll {
