--- a/assets/css/scss/main.scss
+++ b/assets/css/scss/main.scss
@@ -1,5 +1,5 @@
 @import 'normalize';
-@import 'syntax';
+// @import 'syntax';
 @import 'variables';
 
 *, *::after, *::before {
@@ -11,7 +11,7 @@ html {
 }
 
 body {
-  font-family: 'Lato', sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
   color: $body-color;
   background-color: #fbfbfb;
   margin: 0;
