Updated table formatting and added reading progress bar

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -89,4 +89,5 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.3/styles/vs2015.min.css" integrity="sha512-Zz1mHGhgh35NESPqFpo33O7zznTM2xBzfUHF6m7bRUgCxs6kUB8rQGreb4SRxs2zd/LML1zNtJVeh0aM0P9i9Q==" crossorigin="anonymous" />
   <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/10.1.2/highlight.min.js"></script>
   <script>hljs.initHighlightingOnLoad();</script>
+  {% include javascripts.html %}
 </head>
