--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,7 @@
 ---
 layout: main
 ---
+<progress value="0"></progress>
 <article class="article-page">
   <div class="page-content">
     {% if page.img %}
