--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -770,6 +770,59 @@ template {
           box-sizing: border-box;
 }
 
+progress {
+  /* Positioning */
+  position: fixed;
+  left: 0;
+  top: 0;
+
+  /* Dimensions */
+  width: 100%;
+  height: 5px;
+
+  /* Reset the appearance */
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+
+  /* Get rid of the default border in Firefox/Opera. */
+  border: none;
+
+  /* Progress bar container for Firefox/IE10+ */
+  background-color: transparent;
+
+  /* Progress bar value for IE10+ */
+  color: grey;
+}
+
+progress::-webkit-progress-bar {
+  background-color: transparent;
+}
+
+progress::-webkit-progress-value {
+  background-color: grey;
+}
+
+progress::-moz-progress-bar {
+  background-color: grey;
+}
+
+.progress-container {
+  width: 100%;
+  background-color: transparent;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 5px;
+  display: block;
+}
+.progress-bar {
+  background-color: grey;
+  width: 0%;
+  display: block;
+  height: inherit;
+}
+
 html {
   line-height: 1.5;
 }
@@ -839,7 +892,7 @@ table {
 
 table td, table.blueTable th {
   border: 1px solid #aaa;
-  padding: 3px 2px;
+  padding: 5px 5px;
 }
 
 table tbody td {
@@ -847,7 +900,7 @@ table tbody td {
 }
 
 table tr:nth-child(even) {
-  background: #adbecc;
+  background: #eee;
 }
 
 table thead {
@@ -864,6 +917,8 @@ table thead th {
   font-weight: bold;
   color: #fff;
   border-left: 1px solid #d0e4f5;
+  background: #515151;
+  padding: 5px 5px;
 }
 
 table thead th:first-child {
