--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,12 @@
 ---
 layout: main
 ---
-<progress value="0"></progress>
+<!-- <progress value="0" max="1"></progress> -->
+<progress value="0">
+  <div class="progress-container">
+    <span class="progress-bar"></span>
+  </div>
+</progress>
 <article class="article-page">
   <div class="page-content">
     {% if page.img %}
