--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -845,7 +845,7 @@ blockquote {
   padding-left: 1.1rem;
   margin-left: 1rem;
   font-style: italic;
-  color: #ada8a8;
+  color: #524242;
 }
 
 pre {
