--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -828,7 +828,7 @@ h1 {
 img {
   max-width: 100%;
   vertical-align: middle;
-  display: inline-block;
+  /* display: inline-block; */
 }
 
 img + em {
